@@ -57,6 +57,7 @@
     @RPMCONFIGDIR@/brp-strip \
     @RPMCONFIGDIR@/brp-strip-static-archive \
     @RPMCONFIGDIR@/brp-strip-comment-note \
+    @RPMCONFIGDIR@/brp-nobuildrootpath \
 %{nil}
 
 %__spec_install_post\
