@@ -21,7 +21,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.37
+Release: 0.38
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -458,13 +458,16 @@ exit 0
 %rpmattr	%{__prefix}/lib/rpm/magic.mime.mgc
 %rpmattr	%{__prefix}/lib/rpm/magic.prov
 %rpmattr	%{__prefix}/lib/rpm/magic.req
+
+%rpmattr	%{__prefix}/lib/rpm/libtooldeps.sh
 %rpmattr	%{__prefix}/lib/rpm/perldeps.pl
 %rpmattr	%{__prefix}/lib/rpm/perl.prov
 %rpmattr	%{__prefix}/lib/rpm/perl.req
+%rpmattr	%{__prefix}/lib/rpm/pkgconfigdeps.sh
 %rpmattr	%{__prefix}/lib/rpm/pythondeps.sh
+%rpmattr	%{__prefix}/lib/rpm/rpmdeps
 
 %rpmattr	%{__prefix}/lib/rpm/rpm[bt]
-%rpmattr	%{__prefix}/lib/rpm/rpmdeps
 %rpmattr	%{__prefix}/lib/rpm/trpm
 %rpmattr	%{__prefix}/lib/rpm/u_pkg.sh
 %rpmattr	%{__prefix}/lib/rpm/vpkg-provides.sh
@@ -579,6 +582,11 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sun Nov  6 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.38
+- autogenerate libtool *.la dependencies (#159221).
+- autogenerate pkgconfig *.pc dependencies (#159235).
+- add brp-nobuildrootpath to scrub $RPM_BUILD_ROOT from *.la and *.pc.
+
 * Sat Nov  5 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.37
 - use bsearch to speed up tagname() and tagvalue().
 - display tag value and type with rpmquery -v --querytags.
