@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = 1.4 foreign
 
 EXTRA_DIST = \
 	brp-compress brp-python-bytecompile brp-java-gcjcompile brp-redhat \
-	brp-strip brp-strip-comment-note \
+	brp-strip brp-strip-comment-note brp-nobuildrootpath \
 	brp-strip-shared brp-strip-static-archive brp-sparc64-linux \
 	check-files check-prereqs convertrpmrc.sh cross-build \
 	find-debuginfo.sh find-lang.sh find-prov.pl find-req.pl \
@@ -27,7 +27,7 @@ all:
 configdir = ${prefix}/lib/rpm
 config_SCRIPTS = \
 	brp-compress brp-python-bytecompile brp-java-gcjcompile brp-redhat \
-	brp-strip brp-strip-comment-note \
+	brp-strip brp-strip-comment-note brp-nobuildrootpath \
 	brp-strip-shared brp-strip-static-archive brp-sparc64-linux \
 	check-files check-prereqs convertrpmrc.sh cross-build \
 	find-debuginfo.sh find-lang.sh find-prov.pl find-req.pl \
